Fix crash in WMF import - fdo#36991.

(cherry picked from commit c4361c93de2b9661d59bc4aa799dffea7ad579e2)

Signed-off-by: Tor Lillqvist <tlillqvist@novell.com>